Consultas de ventas por periodo elegido. Armado de modulo para carga de caja de sepelio, controlar correcto funcionamiento y agregar opciones de edicion de ingresos y datos de caja

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    />
+
     <title>WERCHOW - SGI</title>
   </head>
   <body>
